[package]
name = "blog-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
blog-common = { path = "../common" }
axum = { version = "0.8.6", features = ["ws"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tower-http = { version = "0.6.6", features = ["trace"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
futures = "0.3.31"
