[package]
name = "blog-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
blog-common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

axum = { version = "0.8.7", features = ["ws"] }
tower-http = { version = "0.6.6", features = ["trace"] }
serde_json = "1.0.145"
futures = "0.3.31"
