[package]
name = "blog-reporter"
version = "0.1.0"
edition = "2024"

[dependencies]
blog-common = { path = "../common" }
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = { version = "1.0.228", features = ["derive"] }
objc2-app-kit = "0.3.2"
block2 = "0.6.2"
objc2-foundation = "0.3.2"
anyhow = "1.0.100"
objc2 = "0.6.3"
base64 = "0.22.1"
