[package]
name = "blog-reporter"
version = "0.1.0"
edition = "2024"

[dependencies]
blog-common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

reqwest = { version = "0.12.24", features = ["json"] }
toml = "0.9.8"
base64 = "0.22.1"

objc2-app-kit = "0.3.2"
block2 = "0.6.2"
objc2-foundation = "0.3.2"
objc2 = "0.6.3"
